changes hash to uuid for find with /v1/backups/transfer|transaction|deposit/{uuid}
