# pkg/grpc_server/store_vault_server/h_get_backup_transfer_by_uuid.go
@@ -6,7 +6,7 @@ import (
 	"fmt"
 	"intmax2-store-vault/internal/open_telemetry"
 	node "intmax2-store-vault/internal/pb/gen/store_vault_service/node"
-	getBackupDepositByHash "intmax2-store-vault/internal/use_cases/get_backup_deposit_by_hash"
+	getBackupTransferByUuid "intmax2-store-vault/internal/use_cases/get_backup_transfer_by_uuid"
 	"intmax2-store-vault/pkg/grpc_server/utils"
 	errorsDB "intmax2-store-vault/pkg/sql_db/errors"
 
@@ -15,14 +15,14 @@ import (
 	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
-func (s *StoreVaultServer) GetBackupDepositByHash(
+func (s *StoreVaultServer) GetBackupTransferByUuid(
 	ctx context.Context,
-	req *node.GetBackupDepositByHashRequest,
-) (*node.GetBackupDepositByHashResponse, error) {
-	resp := node.GetBackupDepositByHashResponse{}
+	req *node.GetBackupTransferByUuidRequest,
+) (*node.GetBackupTransferByUuidResponse, error) {
+	resp := node.GetBackupTransferByUuidResponse{}
 
 	const (
-		hName      = "Handler GetBackupDepositByHash"
+		hName      = "Handler GetBackupTransferByUuid"
 		requestKey = "request"
 	)
 
@@ -32,9 +32,9 @@ func (s *StoreVaultServer) GetBackupDepositByHash(
 		))
 	defer span.End()
 
-	input := getBackupDepositByHash.UCGetBackupDepositByHashInput{
-		Recipient:   req.Recipient,
-		DepositHash: req.DepositHash,
+	input := getBackupTransferByUuid.UCGetBackupTransferByUuidInput{
+		Recipient: req.Recipient,
+		Uuid:      req.Uuid,
 	}
 
 	err := input.Valid()
@@ -43,26 +43,26 @@ func (s *StoreVaultServer) GetBackupDepositByHash(
 		return &resp, utils.BadRequest(spanCtx, err)
 	}
 
-	var info getBackupDepositByHash.UCGetBackupDepositByHash
+	var info getBackupTransferByUuid.UCGetBackupTransferByUuid
 	err = s.dbApp.Exec(spanCtx, &info, func(d interface{}, in interface{}) (err error) {
 		q, _ := d.(SQLDriverApp)
 
-		var result *getBackupDepositByHash.UCGetBackupDepositByHash
-		result, err = s.commands.GetBackupDepositByHash(s.config, s.log, q).Do(spanCtx, &input)
+		var result *getBackupTransferByUuid.UCGetBackupTransferByUuid
+		result, err = s.commands.GetBackupTransferByUuid(s.config, s.log, q).Do(spanCtx, &input)
 		if err != nil {
 			open_telemetry.MarkSpanError(spanCtx, err)
-			const msg = "failed to get backup deposit by hash: %w"
+			const msg = "failed to get backup transfer by uuid: %w"
 			return fmt.Errorf(msg, err)
 		}
 
-		if v, ok := in.(*getBackupDepositByHash.UCGetBackupDepositByHash); ok {
-			v.ID = result.ID
-			v.Recipient = result.Recipient
+		if v, ok := in.(*getBackupTransferByUuid.UCGetBackupTransferByUuid); ok {
+			v.Uuid = result.Uuid
 			v.BlockNumber = result.BlockNumber
-			v.EncryptedDeposit = result.EncryptedDeposit
+			v.Recipient = result.Recipient
+			v.EncryptedTransfer = result.EncryptedTransfer
 			v.CreatedAt = result.CreatedAt
 		} else {
-			const msg = "failed to convert of the backup deposit by hash"
+			const msg = "failed to convert of the backup transfer by uuid"
 			err = fmt.Errorf(msg)
 			open_telemetry.MarkSpanError(spanCtx, err)
 			return err
@@ -72,20 +72,20 @@ func (s *StoreVaultServer) GetBackupDepositByHash(
 	})
 	if err != nil {
 		if errors.Is(err, errorsDB.ErrNotFound) {
-			return &resp, utils.NotFound(spanCtx, fmt.Errorf("%s", getBackupDepositByHash.NotFoundMessage))
+			return &resp, utils.NotFound(spanCtx, fmt.Errorf("%s", getBackupTransferByUuid.NotFoundMessage))
 		}
 
-		const msg = "failed to get backup deposit by hash with DB App: %+v"
+		const msg = "failed to get backup transfer by uuid with DB App: %+v"
 		return &resp, utils.Internal(spanCtx, s.log, msg, err)
 	}
 
 	resp.Success = true
-	resp.Data = &node.GetBackupDepositByHashResponse_Data{
-		Deposit: &node.GetBackupDepositByHashResponse_Deposit{
-			Id:               info.ID,
-			Recipient:        info.Recipient,
-			BlockNumber:      info.BlockNumber,
-			EncryptedDeposit: info.EncryptedDeposit,
+	resp.Data = &node.GetBackupTransferByUuidResponse_Data{
+		Transfer: &node.GetBackupTransferByUuidResponse_Transfer{
+			Uuid:              info.Uuid,
+			BlockNumber:       info.BlockNumber,
+			Recipient:         info.Recipient,
+			EncryptedTransfer: info.EncryptedTransfer,
 			CreatedAt: &timestamppb.Timestamp{
 				Seconds: info.CreatedAt.Unix(),
 				Nanos:   int32(info.CreatedAt.Nanosecond()),
